# handtux

./: Cargo.toml  README.md  tauri.conf.json
.github/workflows/: rust.yml
frontend/: index.html
python/: ocr_module.py
src/: main.rs  processing.rs  trocr_model.rs  trocr_processor.rs  ui.rs
src-tauri/: tauri.conf.json
src/trocr_candle_wrapper/: mod.rs
src/trocr_candle_wrapper/image_processor/: mod.rs
