[package]
name = "handtux"
version = "0.1.0"
description = "A way for Linux stylus users to write input without having to use a keyboard."
authors = ["0jrx4b8"]
license = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0" }
tauri-plugin-log = "2.0.0-rc"
base64 = "0.22.1"
image = "0.24.9"
kalosm = { version = "0.3.2", features = ["full", "vision"] }
tokio = "1.41.1"
