[package]
name = "handtux"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
candle-examples = "0.8.1"
candle-nn = "0.8.1"
candle-transformers = "0.8.1"
eframe = "0.31.0"
hf-hub = "0.4.1"
image = "0.25.5"
lazy_static = "1.5.0"
pyo3 = "0.23.4"
serde = "1.0.217"
serde_json = "1.0.138"
tokenizers = "0.21.0"
